Keyguard: Forward port lockscreen quick unlock (2/2)
Change-Id: I9585d218978196b7c6b7009b4384b64eeeb6b4bf#

--- a/res/xml/security_settings_pin.xml
+++ b/res/xml/security_settings_pin.xml
@@ -35,6 +35,11 @@
             android:title="@string/lockscreen_targets_message" />
             
         <com.android.settings.cyanogenmod.SystemSettingSwitchPreference
+            android:key="lockscreen_quick_unlock_control"
+            android:title="@string/unlock_quick_unlock_control_title"
+            android:summary="@string/unlock_quick_unlock_control_summary" />
+            
+        <com.android.settings.cyanogenmod.SystemSettingSwitchPreference
             android:key="lockscreen_scramble_pin_layout"
             android:title="@string/unlock_scramble_pin_layout_title"
             android:summary="@string/unlock_scramble_pin_layout_summary" />
