--- a/res/xml/security_settings_password.xml
+++ b/res/xml/security_settings_password.xml
@@ -33,6 +33,11 @@
             android:key="lockscreen_shortcuts_settings"
             android:fragment="com.android.settings.cyanogenmod.LockscreenShortcuts"
             android:title="@string/lockscreen_targets_message" />
+            
+        <com.android.settings.cyanogenmod.SystemSettingSwitchPreference
+            android:key="lockscreen_quick_unlock_control"
+            android:title="@string/unlock_quick_unlock_control_title"
+            android:summary="@string/unlock_quick_unlock_control_summary" />
 
         <ListPreference
             android:key="lock_after_timeout"
