Settings : Lockscreen shortcuts
Change-Id: I412d80f262f4d3d578ffa09c6b48940af71240c4

Conflicts:

	res/xml/security_settings_password.xml
	res/xml/security_settings_pin.xml

--- a/res/xml/security_settings_chooser.xml
+++ b/res/xml/security_settings_chooser.xml
@@ -43,6 +43,11 @@
             android:title="@string/owner_info_settings_title"
             android:summary="@string/owner_info_settings_summary"/>
 
+        <PreferenceScreen
+            android:key="lockscreen_shortcuts_settings"
+            android:fragment="com.android.settings.cyanogenmod.LockscreenShortcuts"
+            android:title="@string/lockscreen_targets_message" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
