QS: add newly added tiles
* Battery saver
* Brightness
* Expanded desktop
* Screen off

* also add notifications tile

Change-Id: I64956333bd22d26db6ce72a6149b496d4542bfec

--- a/res/values/rr_strings.xml
+++ b/res/values/rr_strings.xml
@@ -730,4 +730,10 @@
     <string name="qs_sync_tile">Sync</string>
     <!-- Navring targets (enable/disable) -->
     <string name="navigation_ring_enable_title">Enable navigation rings</string>
+    <!-- Quick Settings tiles -->
+    <string name="qs_battery_saver_tile">Battery saver</string>
+    <string name="qs_brightness_tile">Brightness</string>
+    <string name="qs_expanded_desktop_tile">Expanded desktop</string>
+    <string name="qs_notifications_tile">Notifications</string>
+    <string name="qs_screen_off_tile">Screen off</string>
 </resources>
